re-order work, gitignore

--- a/less/styles.less
+++ b/less/styles.less
@@ -157,13 +157,12 @@ img {
 
 }
 
-@media only screen and (min-width: 480px) {
+/*@media only screen and (min-width: 480px) {
 	.progressive, .grid1, .grid2 {
 		width: 50%;
 	}
-
 }
-
+*/
 @media only screen and (min-width: 480px) and (orientation:landscape) {
 
 }
