added new image

--- a/css/styles.css
+++ b/css/styles.css
@@ -89,14 +89,11 @@ ul#tmbs {
   list-style-type: none;
   content: "";
 }
-.progressive,
 .grid1,
 .grid2 {
   display: inline-block;
   float: left;
   overflow: visible;
-  /*	margin-bottom:15px;
-	padding-left:20px;*/
   width: 100%;
   height: auto;
   border: 0 !important;
@@ -139,15 +136,13 @@ img {
     margin: 0 0.8em 0 0;
   }
 }
-@media only screen and (min-width: 480px) {
-  .progressive,
-  .grid1,
-  .grid2 {
-    width: 50%;
-  }
+/*@media only screen and (min-width: 480px) {
+	.grid1, .grid2 {
+		width: 50%;
+	}
 }
+*/
 @media only screen and (min-width: 768px) {
-  .progressive,
   .grid1,
   .grid2 {
     /*width: 50%;*/
@@ -184,10 +179,9 @@ img {
   }
 }
 @media only screen and (min-width: 1024px) {
-  /*	.progressive, .grid1, .grid2 {
+  /*	.grid1, .grid2 {
 		width: 33.333333333333%;
 	}*/
-  .progressive,
   .grid1,
   .grid2 {
     width: 25%;
@@ -195,7 +189,6 @@ img {
 }
 /*@media only screen and (min-width: 1140px) {*/
 @media only screen and (min-width: 1120px) {
-  .progressive,
   .grid1 {
     width: 25%;
   }
@@ -204,7 +197,6 @@ img {
   }
 }
 @media only screen and (min-width: 1200px) {
-  .progressive,
   .grid1 {
     width: 20%;
   }
