--- a/less/styles.less
+++ b/less/styles.less
@@ -100,14 +100,11 @@ ul#tmbs {
 	list-style-type:none;
 	content:"";	
 }
-
-.progressive, .grid1, .grid2 {
-	display:inline-block;
-	float:left;
-	overflow:visible;
-/*	margin-bottom:15px;
-	padding-left:20px;*/
-	width:100%;
+.grid1, .grid2 {
+	display: inline-block;
+	float: left;
+	overflow: visible;
+	width: 100%;
 	height: auto; 
 
 	border: 0 !important;
@@ -158,7 +155,7 @@ img {
 }
 
 /*@media only screen and (min-width: 480px) {
-	.progressive, .grid1, .grid2 {
+	.grid1, .grid2 {
 		width: 50%;
 	}
 }
@@ -168,7 +165,7 @@ img {
 }
 
 @media only screen and (min-width: 768px) {
-	.progressive, .grid1, .grid2 {
+	.grid1, .grid2 {
 		/*width: 50%;*/
 		width: 33.333333333333%;
 	}
@@ -197,17 +194,17 @@ img {
 }
 
 @media only screen and (min-width: 1024px) {
-/*	.progressive, .grid1, .grid2 {
+/*	.grid1, .grid2 {
 		width: 33.333333333333%;
 	}*/
-	.progressive, .grid1, .grid2 {
+	.grid1, .grid2 {
 		width: 25%;
 	}
 }
 
 /*@media only screen and (min-width: 1140px) {*/
 @media only screen and (min-width: 1120px) {
-	.progressive, .grid1 {
+	.grid1 {
 		width: 25% - @correction;
 	}
 
@@ -217,7 +214,7 @@ img {
 }
 
 @media only screen and (min-width: 1200px) {
-	.progressive, .grid1 {
+	.grid1 {
 		width: 20% - @correction;
 	}
 
