--- a/less/styles.less
+++ b/less/styles.less
@@ -45,11 +45,22 @@ ul.social {
 	list-style: none;
 	.clearfix();
 }
+
 .social li {
 	margin-left: 0.8em;
 	float: left;
 	width: 50px;
 	height: 50px;
+}
+
+/* Browse Happy */
+/* ------------------------------------------------------------------------------------ */
+
+.browsehappy {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
 }
 
 /* Grid */
@@ -107,7 +118,7 @@ ul#tmbs {
 	overflow: visible;
 	width: 100%;
 	height: auto; 
-
+	min-width: 140px;
 	border: 0 !important;
 	word-wrap: break-word;
 	min-height: 1px;
