--- a/css/styles.css
+++ b/css/styles.css
@@ -216,6 +216,7 @@ img {
   }
   .grid2 {
     position: absolute;
+    left: 0;
     width: 50%;
   }
   .alt2 {
@@ -228,6 +229,7 @@ img {
   }
   .grid2 {
     position: absolute;
+    left: 0;
     width: 40%;
   }
   .alt2 {
