--- a/less/styles.less
+++ b/less/styles.less
@@ -240,6 +240,7 @@ img {
 
 	.grid2 {
 		position: absolute;
+		left: 0;
 		width: 50% - @correction;
 	}
 
@@ -255,6 +256,7 @@ img {
 
 	.grid2 {
 		position: absolute;
+		left: 0;
 		width: 40% - @correction;
 	}
 
