--- a/less/styles.less
+++ b/less/styles.less
@@ -129,7 +129,7 @@ ul#tmbs {
 }
 
 #tmbs li {
-	position:relative;
+	// position:relative;
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	box-sizing:border-box;
