--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -18,14 +18,13 @@
 }
 
 ul#tmbs {
-	position:relative;
-	display:table;
-	clear:both;
-	margin:0 auto;
-	/*margin-left: -20px;*/
-	padding:0;
-	list-style-type:none;
-	content:"";	
+	position: relative;
+	display: table;
+	clear: both;
+	margin: 0 auto;
+	padding: 0;
+	list-style-type: none;
+	content: "";	
 }
 .grid1, .grid2 {
 	display: inline-block;
@@ -38,22 +37,23 @@ ul#tmbs {
 	word-wrap: break-word;
 	min-height: 1px;
 	position: relative;
-	-webkit-box-sizing:border-box;
-	-moz-box-sizing:border-box;
-	box-sizing:border-box;
+
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 #tmbs li {
 	// position:relative;
-	-webkit-box-sizing:border-box;
-	-moz-box-sizing:border-box;
-	box-sizing:border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 
-img {
-	display:block;
-	height:auto;
+#tmbs li img {
+	display: block;
+	height: auto;
 	border: 0;
 	vertical-align: middle;
 	max-width: 100%;
