--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -1,6 +1,10 @@
 @import "normalize.less";
 
+@import "variables.less";
 @import "methods.less";
 @import "document.less";
 @import "layout.less";
 @import "media.less";
+
+// pages
+@import "details.less";
