Creating routes to detail pages, complete backend crud (simple validation)

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -402,6 +402,16 @@ ul.social:after {
   margin-left: auto;
   padding: 0 40px;
 }
+.container:before,
+.container:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */
+}
+.container:after {
+  clear: both;
+}
 ul#tmbs {
   position: relative;
   display: table;
