--- a/public/less/document.less
+++ b/public/less/document.less
@@ -1,6 +1,11 @@
 /* Document */
 /* ------------------------------------------------------------------------------------ */
 
+body, html {
+	font-family: 'Gudea', helvetica, arial, sans-serif;
+	color: #555;
+}
+
 h1 {
 	float: left;
 	width: 287px;
@@ -15,7 +20,12 @@ header {
 }
 
 footer {
+	text-align: center;
 	margin: 4em 0;
+}
+
+footer span {
+	font-family: helvetica, arial, sans-serif;
 }
 
 ul.social {
