--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,3 +1,4 @@
+@import url('http://fonts.googleapis.com/css?family=Gudea:400,700,400italic');
 /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
@@ -341,6 +342,11 @@ table {
 /*@correction: 0.5 / @totalWidth * 100 * 1%;*/
 /* Document */
 /* ------------------------------------------------------------------------------------ */
+body,
+html {
+  font-family: 'Gudea', helvetica, arial, sans-serif;
+  color: #555;
+}
 h1 {
   float: left;
   width: 287px;
@@ -362,7 +368,11 @@ header:after {
   clear: both;
 }
 footer {
+  text-align: center;
   margin: 4em 0;
+}
+footer span {
+  font-family: helvetica, arial, sans-serif;
 }
 ul.social {
   float: right;
@@ -574,9 +584,155 @@ ul#tmbs {
     margin-left: 40%;
   }
 }
+.sprite {
+  display: inline-block;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  text-decoration: none;
+}
+.icnDownload {
+  width: 24px;
+  height: 24px;
+  margin-right: 8px;
+  vertical-align: middle;
+  background: url('../imgs/icnDownload.png');
+}
+.icnArrowLeft {
+  width: 16px;
+  height: 16px;
+  margin: 1px 2px 0 0;
+  vertical-align: middle;
+  background: url('../imgs/icnArrowLeft.png');
+}
+.icnArrowRight {
+  width: 16px;
+  height: 16px;
+  margin-left: 2px;
+  vertical-align: middle;
+  background: url('../imgs/icnArrowRight.png');
+}
+a {
+  color: #3ca03d;
+  text-decoration: underline;
+}
+a:hover {
+  text-decoration: none;
+}
+hr {
+  margin: 0;
+  padding: 0;
+  height: 1px;
+  clear: both;
+  border: none;
+  color: #ccc;
+  background-color: #ccc;
+}
 .details {
-  padding-left: 20px;
+  padding-left: 40px;
+}
+.details:before,
+.details:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */
+}
+.details:after {
+  clear: both;
+}
+.details .title:before,
+.details .title:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */
+}
+.details .title:after {
+  clear: both;
 }
 .details h2 {
-  margin-top: 0;
+  float: left;
+  font-size: 2em;
+  margin: 0 0 5px 0;
+}
+.details .title ul {
+  margin-top: 6px;
+  float: right;
+}
+.details .title ul:before,
+.details .title ul:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */
+}
+.details .title ul:after {
+  clear: both;
+}
+.details .title ul li {
+  float: left;
+}
+.details .title ul li.next {
+  margin-left: 14px;
+}
+.details p {
+  line-height: 1.6;
+}
+.details ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.details dd,
+dt,
+dl {
+  margin: 0;
+  padding: 0;
+}
+.details .date {
+  margin: 0 0 10px 0;
+  font-style: italic;
+  color: #999;
+}
+.details .date span {
+  color: #555;
+}
+ul.tags {
+  margin-bottom: 20px;
+}
+ul.tags:before,
+ul.tags:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */
+}
+ul.tags:after {
+  clear: both;
+}
+.tag {
+  float: left;
+  padding: 4px 8px;
+  margin: 5px 5px 0 0;
+  background: #333;
+  color: #fff;
+}
+.sale {
+  margin-top: 20px;
+}
+.sale-not-avail {
+  font-style: italic;
+}
+.details .shipping {
+  margin-bottom: 20px;
+}
+td.shipping-location {
+  padding-right: 20px;
+}
+td.title {
+  padding: 0 0 15px 0;
+}
+p.print-desc {
+  padding: 0;
+  margin: 20px 0;
 }
