--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -468,6 +468,12 @@ ul#tmbs {
 /* Media Queries */
 /* ------------------------------------------------------------------------------------ */
 @media only screen and (min-width: 320px) and (max-width: 510px) {
+  header {
+    margin-top: 0;
+  }
+  footer {
+    margin: 10px 0;
+  }
   header h1,
   ul.social {
     display: block;
