--- a/public/less/media.less
+++ b/public/less/media.less
@@ -2,13 +2,23 @@
 /* ------------------------------------------------------------------------------------ */
 @media only screen and (min-width: 320px) and (max-width: 510px) {
 
+	header {
+		margin-top: 0;
+	}
+
+	footer {
+		margin: 10px 0;
+	}
+
 	header h1, ul.social {
 		display: block;
 		float: none;
 	}
+
 	ul.social {
 		margin: 0;
 	}
+
 	ul.social li {
 		margin: 0 0.8em 0 0;
 	}
