--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -1,11 +1,10 @@
 @import "normalize.less";
-
+// custom
 @import "variables.less";
 @import "methods.less";
 @import url('http://fonts.googleapis.com/css?family=Gudea:400,700,400italic');
 @import "document.less";
 @import "layout.less";
-@import "media.less";
 @import "sprites.less";
-// pages
-@import "details.less";
+@import "details.less"; // details page
+@import "media.less";
