pagination for home page and styles. buy button markup and styles

--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -13,7 +13,7 @@ ul#tmbs {
 	position: relative;
 	display: table;
 	clear: both;
-	margin: 0 auto;
+	//margin: 0 auto;
 	padding: 0;
 	list-style-type: none;
 	content: "";	
