--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -7,4 +7,5 @@
 @import "layout.less";
 @import "sprites.less";
 @import "details.less"; // details page
+@import "pagination.less";
 @import "media.less";
