--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -354,6 +354,13 @@ h1 {
   background: url('../imgs/logo.png') no-repeat;
   text-indent: -9999px;
 }
+a {
+  color: #3ca03d;
+  text-decoration: underline;
+}
+a:hover {
+  text-decoration: none;
+}
 header {
   margin: 42px 0;
 }
@@ -369,7 +376,7 @@ header:after {
 }
 footer {
   text-align: center;
-  margin: 4em 0;
+  margin: 2em 0;
 }
 footer span {
   font-family: helvetica, arial, sans-serif;
@@ -395,6 +402,19 @@ ul.social:after {
   float: left;
   width: 50px;
   height: 50px;
+}
+.centered {
+  text-align: center;
+}
+.centered:before,
+.centered:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */
+}
+.centered:after {
+  clear: both;
 }
 /* Browse Happy */
 /* ------------------------------------------------------------------------------------ */
@@ -426,7 +446,6 @@ ul#tmbs {
   position: relative;
   display: table;
   clear: both;
-  margin: 0 auto;
   padding: 0;
   list-style-type: none;
   content: "";
@@ -491,13 +510,6 @@ ul#tmbs {
   margin-left: 2px;
   vertical-align: middle;
   background: url('../imgs/icnArrowRight.png');
-}
-a {
-  color: #3ca03d;
-  text-decoration: underline;
-}
-a:hover {
-  text-decoration: none;
 }
 hr {
   margin: 0;
@@ -598,7 +610,8 @@ ul.tags:after {
   background: #333;
   color: #fff;
 }
-.sale {
+.sale,
+.buy-options {
   margin-top: 20px;
 }
 .sale-not-avail {
@@ -610,12 +623,123 @@ ul.tags:after {
 td.shipping-location {
   padding-right: 20px;
 }
+td.shipping-price {
+  text-align: left;
+}
 td.title {
   padding: 0 0 15px 0;
 }
 p.print-desc {
   padding: 0;
   margin: 20px 0;
+}
+td.print-size {
+  padding-right: 55px;
+}
+tr.first td.print-size {
+  height: 56px;
+}
+td.print-price {
+  padding-right: 28px;
+}
+.buy-options .title {
+  padding: 0;
+}
+/* button classes */
+.btn {
+  margin: 0;
+  padding: 5px 12px;
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  background-image: none;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  font-size: 14px;
+  text-decoration: none;
+  border-radius: 4px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  color: #fff;
+  background-color: #3ca03d;
+  border-color: #3ca03d;
+}
+.btn:hover,
+.btn:focus,
+.btn:active {
+  color: #fff;
+  background-color: #3ca03d;
+  border-color: #3ca03d;
+}
+.btn:active {
+  outline: 0;
+  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.2);
+}
+.btn:hover,
+.btn:focus {
+  color: #fff;
+}
+.pagination {
+  height: 36px;
+  margin: 30px 0;
+  padding: 0;
+}
+.pagination {
+  display: inline-block;
+  *display: inline;
+  /* IE7 inline-block hack */
+  *zoom: 1;
+  margin-left: 0;
+  margin-bottom: 0;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+.pagination li {
+  display: inline;
+}
+.pagination a,
+.pagination span {
+  float: left;
+  padding: 0 14px;
+  line-height: 34px;
+  text-decoration: none;
+  border: 1px solid #ddd;
+  border-left-width: 0;
+}
+.pagination a:hover,
+.pagination .active span {
+  background-color: #3ca03d;
+  color: #fff;
+}
+.pagination .active a {
+  color: #999999;
+  cursor: default;
+}
+.pagination .disabled span,
+.pagination .disabled a,
+.pagination .disabled a:hover {
+  color: #ccc;
+  background-color: transparent;
+  cursor: default;
+}
+.pagination li:first-child a,
+.pagination li:first-child span {
+  border-left-width: 1px;
+  -webkit-border-radius: 3px 0 0 3px;
+  -moz-border-radius: 3px 0 0 3px;
+  border-radius: 3px 0 0 3px;
+}
+.pagination li:last-child a,
+.pagination li:last-child span {
+  -webkit-border-radius: 0 3px 3px 0;
+  -moz-border-radius: 0 3px 3px 0;
+  border-radius: 0 3px 3px 0;
 }
 /* Media Queries */
 /* ------------------------------------------------------------------------------------ */
@@ -624,7 +748,7 @@ p.print-desc {
     margin-top: 0;
   }
   footer {
-    margin: 10px 0;
+    margin: 2em 0 1em 0;
   }
   header h1,
   ul.social {
@@ -638,7 +762,7 @@ p.print-desc {
     margin: 0 0.8em 0 0;
   }
   .container {
-    padding: 0 10px;
+    padding: 0 20px;
   }
   .grid1,
   .grid2,
@@ -665,6 +789,9 @@ p.print-desc {
   ul.social {
     display: block;
     float: none;
+  }
+  .container {
+    padding: 0 20px;
   }
   ul.social {
     margin: 0;
@@ -733,6 +860,18 @@ p.print-desc {
   .grid2.detail-col.details {
     margin-top: 20px;
     padding-left: 0;
+  }
+}
+@media only screen and (min-width: 900px) {
+  .grid2.detail-col.details {
+    margin-top: 0;
+    padding-left: 40px;
+  }
+  .grid2.detail-col {
+    width: 50%;
+  }
+  .grid3.detail-col {
+    width: 50%;
   }
 }
 @media only screen and (min-width: 1024px) {
