--- a/public/less/details.less
+++ b/public/less/details.less
@@ -1,12 +1,3 @@
-a {
-	color: #3ca03d;
-	text-decoration: underline;
-}
-
-a:hover {
-	text-decoration: none;
-}
-
 hr {
 	margin: 0;
 	padding: 0;
@@ -85,7 +76,8 @@ ul.tags {
 	color: #fff;
 }
 
-.sale {
+.sale,
+.buy-options {
 	margin-top: 20px;
 }
 
@@ -101,6 +93,10 @@ td.shipping-location {
 	padding-right: 20px;
 }
 
+td.shipping-price {
+	text-align: left;
+}
+
 td.title {
 	padding: 0 0 15px 0;
 }
@@ -108,4 +104,66 @@ td.title {
 p.print-desc {
 	padding: 0;
 	margin: 20px 0;
+}
+
+td.print-size {
+	padding-right: 55px;
+}
+
+tr.first td.print-size {
+	height: 56px;
+}
+
+td.print-price {
+	padding-right: 28px;
+}
+
+.buy-options .title {
+	padding: 0;
+}
+
+/* button classes */
+.btn {
+	margin: 0;
+	padding: 5px 12px;
+	display: inline-block;
+	// font-weight: 400;
+	text-align: center;
+	vertical-align: middle;
+	cursor: pointer;
+	background-image: none;
+	border: 1px solid transparent;
+	white-space: nowrap;
+	font-size: 14px;
+	text-decoration: none;
+
+	// line-height: 1.428571429;
+	border-radius: 4px;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-o-user-select: none;
+	user-select: none;
+
+	color: #fff;
+	background-color: @linkColor;
+	border-color: @linkColor;
+}
+
+.btn:hover,
+.btn:focus,
+.btn:active {
+	color: #fff;
+	background-color: @linkColor;
+	border-color: @linkColor;
+}
+
+.btn:active {
+	outline: 0;
+	-webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.2);
+	box-shadow: inset 0 3px 5px rgba(0,0,0,.2);
+}
+
+.btn:hover, .btn:focus {
+	color: #fff;
 }
