--- a/public/less/media.less
+++ b/public/less/media.less
@@ -7,7 +7,7 @@
 	}
 
 	footer {
-		margin: 10px 0;
+		margin: 2em 0 1em 0;
 	}
 
 	header h1, ul.social {
@@ -24,7 +24,7 @@
 	}
 
 	.container {
-		padding: 0 10px;
+		padding: 0 20px;
 	}
 
 	.grid1,
@@ -62,6 +62,10 @@
 	header h1, ul.social {
 		display: block;
 		float: none;
+	}
+
+	.container {
+		padding: 0 20px;
 	}
 
 	ul.social {
@@ -146,6 +150,22 @@
 	// .grid3.detail-col {
 	// 	width: 50%;
 	// }
+}
+
+@media only screen and (min-width: 900px) {
+	// detail specific
+	.grid2.detail-col.details {
+		margin-top: 0;
+		padding-left: 40px;
+	}
+
+	.grid2.detail-col {
+		width: 50%;
+	}
+
+	.grid3.detail-col {
+		width: 50%;
+	}
 }
 
 @media only screen and (min-width: 1024px) {
