--- a/public/less/document.less
+++ b/public/less/document.less
@@ -8,10 +8,21 @@ body, html {
 
 h1 {
 	float: left;
-	width: 287px;
-	height: 90px;
-	background: url('../imgs/logo.png') no-repeat;
-	text-indent: -9999px;
+	font-size: 1.1em;
+	font-weight: normal;
+	font-style: italic;
+	// width: 287px;
+	// height: 90px;
+	// background: url('../imgs/logo.png') no-repeat;
+	// text-indent: 100%;
+	// white-space: nowrap;
+	// overflow: hidden;
+}
+
+h1 .logo {
+	margin-bottom: 1em;
+	display: block;
+	text-decoration: none;
 }
 
 a {
@@ -41,7 +52,7 @@ footer span {
 ul.social {
 	float: right;
 	padding: 0;
-	margin: 58px 0 0 0;
+	margin: 55px 0 0 0;
 	list-style: none;
 	.clearfix();
 }
