--- a/public/less/media.less
+++ b/public/less/media.less
@@ -1,9 +1,23 @@
 /* Media Queries */
 /* ------------------------------------------------------------------------------------ */
+@media only screen and (width: 320px) {
+	header h1 .logo {
+		margin-bottom: 0.5em;
+	}
+
+	header h1, ul.social {
+		font-size: 1em;
+	}
+}
+
 @media only screen and (min-width: 320px) and (max-width: 510px) {
 
 	header {
-		margin-top: 0;
+		margin-top: 10px;
+	}
+
+	header h1 {
+		margin-bottom: 1.5em;	
 	}
 
 	footer {
@@ -64,6 +78,10 @@
 		float: none;
 	}
 
+	header h1 {
+		margin-bottom: 1.5em;	
+	}
+
 	.container {
 		padding: 0 20px;
 	}
@@ -116,16 +134,16 @@
 
 	h1 {
 		float: left;
-		width: 287px;
-		height: 90px;
-		background: url('../imgs/logo.png') no-repeat;
-		text-indent: -9999px;
+		// width: 287px;
+		// height: 90px;
+		// background: url('../imgs/logo.png') no-repeat;
+		// text-indent: -9999px;
 	}
 
 	ul.social {
 		float: right;
 		padding: 0;
-		margin: 58px 0 0 0;
+		margin: 55px 0 0 0;
 		list-style: none;
 		.clearfix();
 	}
