--- a/public/less/media.less
+++ b/public/less/media.less
@@ -38,6 +38,10 @@
 		margin: 0 0.8em 0 0;
 	}
 
+	.social li.cart-icon {
+		margin-left: 0.8em;
+	}
+
 	.container {
 		padding: 0 20px;
 	}
@@ -138,6 +142,12 @@
 		width: 33.3% - @correction;
 	}
 
+	.extras {
+		.grid1 {
+			width: 25%;
+		}
+	}
+
 	h1 {
 		float: left;
 		// width: 287px;
@@ -215,6 +225,12 @@
 	.grid3.detail-col {
 		width: 50%;
 	}
+
+	.extras {
+		.grid1 {
+			width: 25%;
+		}
+	}
 }
 
 /*@media only screen and (min-width: 1140px) {*/
@@ -259,6 +275,12 @@
 
 	.grid3 {
 		width: 60%;
+	}
+
+	.extras {
+		.grid1 {
+			width: 25%;
+		}
 	}
 
 	.alt2 {
