--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -6,4 +6,5 @@
 @correction: 0;
 @correction2: 0.1;
 @linkColor: #3ca03d;
+@linkHoverColor: lighten(@linkColor, 10%);
 /*@correction: 0.5 / @totalWidth * 100 * 1%;*/
