--- a/public/less/sprites.less
+++ b/public/less/sprites.less
@@ -29,3 +29,10 @@
 	vertical-align: middle;
 	background: url('../imgs/icnArrowRight.png');
 }
+
+.icnCart {
+	width: 50px;
+	height: 50px;
+	vertical-align: middle;
+	background: url('../imgs/cart.png');
+}
