--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -2,10 +2,11 @@
 // custom
 @import "variables.less";
 @import "methods.less";
-@import url('http://fonts.googleapis.com/css?family=Gudea:400,700,400italic');
+@import url("http://fonts.googleapis.com/css?family=Gudea:400,700,400italic");
 @import "document.less";
 @import "layout.less";
 @import "sprites.less";
 @import "details.less"; // details page
 @import "pagination.less";
 @import "media.less";
+@import "cart.less";
