--- a/public/less/cart.less
+++ b/public/less/cart.less
@@ -221,6 +221,12 @@ label {
   font-size: 1.2em;
 }
 
+.required {
+  vertical-align: middle;
+  font-size: 1.5em;
+  color: red;
+}
+
 
 /* Make more adjustments for phone */
 @media screen and (max-width: 350px) {
